--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -1,6 +1,6 @@
 ---
 /* STATIC CMS ADMIN PAGE */
-import { menu, page, settings, post, project, product } from "@cms/index.mjs";
+import { page, settings, post, project, product } from "@cms/index.mjs";
 import logo from "@icons/logo.svg";
 import newsIcon from "@icons/news.svg";
 import pageIcon from "@icons/page.svg";
@@ -28,7 +28,7 @@ const config = {
     max_file_size: 2012000,
     folder_support: true,
   },
-  collections: [page, post, project, product, menu, settings],
+  collections: [page, post, project, product, settings],
 };
 ---
 
