--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,7 +26,7 @@ const currentPath = Astro.url.pathname.split("/")[1];
 ---
 
 <!doctype html>
-<html lang={lang} data-currency={currency}>
+<html lang={lang} data-currency={currency} data-theme="dark">
   <head>
     <BaseHead
       title={title}
