--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,14 +2,14 @@
 
 @layer base {
   :root {
-    --color-primary: 75 38 143; /* 135 94 212 */
-    --color-secondary: 107 154 199;
-    --color-accent: 119 112 150;
+    --color-primary: 129 221 255;
+    --color-secondary: 68 128 150;
+    --color-accent: 129 221 255;
     --color-warning: 202 121 45;
     --color-danger: 180 25 14;
     --color-success: 77 137 101;
-    --color-dark: 25 28 38;
-    --color-light: 243 241 239;
+    --color-dark: 2 2 5;
+    --color-light: 222 244 255;
     --color-info: 25 28 38;
 
     --spacing: 1rem;
@@ -31,7 +31,21 @@
 
   [data-theme="dark"] {
     :root {
-      --color-primary: 135 94 212;
+      --color-primary: 129 221 255;
+      --color-secondary: 68 128 150;
+      --color-accent: 129 221 255;
+      --color-warning: 202 121 45;
+      --color-danger: 180 25 14;
+      --color-success: 77 137 101;
+      --color-dark: 0 23 49;
+      --color-light: 222 244 255;
+      --color-info: 25 28 38;
+    }
+  }
+
+  [data-theme="light"] {
+    :root {
+      --color-primary: 75 38 143; /* 135 94 212 */
       --color-secondary: 107 154 199;
       --color-accent: 119 112 150;
       --color-warning: 202 121 45;
