--- a/src/components/block/TextImage.astro
+++ b/src/components/block/TextImage.astro
@@ -53,7 +53,7 @@ const animation = `image_${animate ? imageName : Math.random()}`;
   <div
     class={`container-${container} ${columnClass()} text-image gap-8 text-image__${template} ${
       reverse ? "reverse" : "normal"
-    } ${template === "banner" ? "nebulix-parallax bg-dark" : ""}`}
+    } ${template === "banner" ? "c0reV2-parallax bg-dark" : ""}`}
   >
     <div class="media">
       {
