--- a/src/components/hero/HeroImage.astro
+++ b/src/components/hero/HeroImage.astro
@@ -22,7 +22,7 @@ const { slug } = Astro.params;
 ---
 
 <div
-  class={`hero relative overflow-hidden nebulix-parallax ${
+  class={`hero relative overflow-hidden c0reV2-parallax ${
     style.hero_surface || "surface-dark"
   } ${style.hero_class || ""}`}
   transition:name={`hero_${slug || Math.random()}`}
