--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -16,7 +16,7 @@ const url = Astro.site;
 const config = {
   locale: lang,
   site_url: url,
-  logo_url: "https://nebulix.unfolding.io/logo.svg",
+  logo_url: "https://c0reV2.unfolding.io/logo.svg",
   local_backend: true,
   backend: {
     name: "test-repo",
@@ -37,7 +37,7 @@ const config = {
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nebulix Admin | by unfolding.io</title>
+    <title>c0reV2 Admin | by unfolding.io</title>
     <link
       rel="stylesheet"
       href={`https://unpkg.com/@staticcms/app@^${staticCmsVersion}/dist/main.css`}
