added video support

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,7 +39,7 @@ const showNewsletter = !!import.meta.env.NEWSLETTER_PROVIDER;
         <span> {about.data.sitename}</span>
       </div>
     </div>
-    <div class="grid w-full lg:w-2/3">
+    <!-- <div class="grid w-full lg:w-2/3">
       <div
         class="flex-wrap justify-center gap-8 text-center sm:flex sm:justify-between sm:text-left"
       >
@@ -100,7 +100,7 @@ const showNewsletter = !!import.meta.env.NEWSLETTER_PROVIDER;
           )
         }
       </div>
-    </div>
+    </div> -->
   </div>
 
   
