--- a/src/layouts/PageLayoutWide.astro
+++ b/src/layouts/PageLayoutWide.astro
@@ -3,11 +3,15 @@ import Block from "@components/block/Block.astro";
 import BaseLayout from "./BaseLayout.astro";
 import HeroImage from "@components/hero/HeroImage.astro";
 import HeroPlain from "@components/hero/HeroPlain.astro";
+import { MediaElementPlayer } from 'mediaelement';
+import 'mediaelement/build/mediaelementplayer.min.css';
+
 
 const props = Astro.props;
-const { title, description, blocks, style, thumbnail, og_image } = Astro.props;
+const { title, description, blocks, style, video, thumbnail, og_image } = Astro.props;
 const contentClass = style.hero_template === "plain" ? "py-0" : "py-20";
 const hasBlocks = blocks && blocks.length > 0;
+const hasVideo = video && video.length > 0;
 ---
 
 <BaseLayout
@@ -25,10 +29,17 @@ const hasBlocks = blocks && blocks.length > 0;
     )
   }
   {
-    style.hero_template == "image" && (
+    style.hero_template == "image" && !hasVideo && (
       <HeroImage {...props}>
         <slot name="hero" />
       </HeroImage>
+    )
+  }
+  {
+    hasVideo && (      
+        <video id="heroVideo" src={video} loop muted autoplay class="mejs__player" data-mejsoptions='{"alwaysShowControls": "false", "stretching":"fill"}' height="100%">
+          <slot name="hero" />
+        </video>      
     )
   }
 
