--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -513,6 +513,16 @@ a.link-underline {
   visibility: hidden;
 }
 
+
+/****** media *****/
+#heroVideo {
+  height:100%;
+  max-width: 100%;
+  max-width:100vw;
+}
+
+
+
 /****** states ******/
 [data-is-top="true"]{
   .surface-menu {
